--- a/css/templatemo-ebook-landing.css
+++ b/css/templatemo-ebook-landing.css
@@ -1,10 +1,3 @@
-/*
-
-TemplateMo 588 ebook landing
-
-https://templatemo.com/tm-588-ebook-landing
-
-*/
 
 /*---------------------------------------
   CUSTOM PROPERTIES ( VARIABLES )             
@@ -416,7 +409,8 @@ strong {
 }
 
 .sticky-wrapper.is-sticky .navbar {
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgb(255, 255, 255);
+  box-shadow: #000000;
 }
 
 .navbar {
@@ -471,7 +465,7 @@ strong {
 
 .navbar-nav .nav-link {
   display: inline-block;
-  color: var(--white-color);
+  color: black;
   font-size: var(--menu-font-size);
   font-weight: var(--font-weight-semibold);
   letter-spacing: 0.5px;
@@ -521,7 +515,7 @@ strong {
 }
 
 .navbar-toggler .navbar-toggler-icon {
-  background: var(--white-color);
+  background: black;
   transition: background 10ms 300ms ease;
   display: block;
   width: 30px;
@@ -537,7 +531,7 @@ strong {
   position: absolute;
   right: 0;
   left: 0;
-  background: var(--white-color);
+  background: black;
   width: 30px;
   height: 2px;
   content: '';
@@ -861,7 +855,7 @@ strong {
 
 
 /*---------------------------------------
-  EBOOK DOWNLOAD FORM               
+  Rajlaxmi Softsolutions DOWNLOAD FORM               
 -----------------------------------------*/
 .ebook-download-form {
   border-radius: var(--border-radius-medium);
@@ -1007,7 +1001,7 @@ strong {
   }
   
   .navbar {
-    background-color: rgba(0, 0, 0, 0.65);
+    background-color: rgb(255, 255, 255);
   }
 
   .navbar-expand-lg .navbar-nav {
